--- a/mainWindow.css
+++ b/mainWindow.css
@@ -24,26 +24,68 @@ body::-webkit-scrollbar {
     text-align: center;
     -webkit-app-region: drag;
     color: #EEEEEE;
+    font-size: small;
     background-color: rgb(79, 88, 91);
     margin: 1px 1px 1px 1px;
     
 }
 
-#title-bar-menu button{
+.menu-button{
     z-index: 2;
     color: #EEEEEE;
     -webkit-app-region: no-drag;
     border-width: 0;
+    height: 25px;
     background-color: inherit;
     margin: 0;
     -webkit-user-select: none;
-    height: 15;
-
 }
 
+.menu-button:focus {
+    outline: none;
+}
+
+#content span:focus {
+    outline: none;
+}
+
+.dropdown {
+    float: left;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #777777;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-button{
+    padding: 12px 16px;
+    display: block;
+    height: 80px;
+    z-index: 2;
+    color: #EEEEEE;
+    -webkit-app-region: no-drag;
+    border-width: 0;
+    height: 100%;
+    background-color: inherit;
+    margin: 0;
+    -webkit-user-select: none;
+  }
+  
+.dropdown-content a:hover {
+      background-color: #ddd;
+}
+  
 #title-bar-menu button:hover{
     background-color: #888888;
+}
 
+#title-bar-menu button:active{
+    background-color: #888888;
 }
 
 #title-bar-btns {
@@ -54,7 +96,7 @@ body::-webkit-scrollbar {
     -webkit-app-region: no-drag;
     float: right;
     -webkit-user-select: none;
-    height: 100%;
+    height: 25px;
 }
 
 #title-bar-btns div{
@@ -85,14 +127,22 @@ body::-webkit-scrollbar {
 #lineNums {
     z-index: 0;
     position: fixed;
-    top: 5%;
+    /* top: calc(5% + 2px); */
     left: 10%;
     width: 30px;
     display:block;
     overflow:hidden;
     height: inherit;
-    background-color: #333B42;
+    background-color: #222A31;
 }
+
+.vl {
+    border-left: 1px solid #AAAAAA;
+    height: 90%;
+    left: calc(10% + 29px);
+    opacity: 75%;
+    position: fixed;
+  }
 
 #content {
     z-index: -1;
