--- a/mainWindow.css
+++ b/mainWindow.css
@@ -28,6 +28,7 @@ body::-webkit-scrollbar {
     width: calc(100% - 1px);
     text-align: center;
     -webkit-app-region: drag;
+    -webkit-user-select: none;
     color: #EEEEEE;
     font-size: small;
     background-color: rgb(79, 88, 91);
@@ -67,6 +68,11 @@ body::-webkit-scrollbar {
     z-index: 1;
 }
 
+.dropdown-content hr {
+    padding: 0;
+    margin: 0;
+}
+
 .dropdown-button{
     padding: 12px 16px;
     display: block;
@@ -76,13 +82,23 @@ body::-webkit-scrollbar {
     -webkit-app-region: no-drag;
     border-width: 0;
     height: 100%;
+    width: 100%;
     background-color: inherit;
     margin: 0;
+    font-size: 12px;
     -webkit-user-select: none;
   }
   
 .dropdown-content a:hover {
       background-color: #ddd;
+}
+
+.dropdown-button-text {
+    float: left;
+}
+
+.dropdown-button-shortcut {
+    float: right;
 }
   
 #title-bar-menu button:hover{
@@ -129,22 +145,30 @@ body::-webkit-scrollbar {
     -webkit-user-select: none;
 }
 
+#title-text {
+    top: 5px;
+    position: relative;
+    -webkit-user-select: none;
+    -webkit-app-region: drag;
+    color: #AAAAAA;
+}
+
 #lineNums {
     z-index: 0;
     position: fixed;
-    /* top: calc(5% + 2px); */
-    left: 10%;
+    left: 20%;
     width: 30px;
     display:block;
     overflow:hidden;
     height: inherit;
+    -webkit-user-select: none;
     background-color: #222A31;
 }
 
 .vl {
     border-left: 1px solid #AAAAAA;
     height: 90%;
-    left: calc(10% + 29px);
+    left: calc(20% + 29px);
     opacity: 75%;
     position: fixed;
   }
@@ -152,14 +176,25 @@ body::-webkit-scrollbar {
 #content {
     z-index: -1;
     position: fixed;
-    top: 5%;
-    left: 10%;
+    top: 10%;
+    left: 20%;
     width: 90%;
     display:block;
     overflow:auto;
     overflow-x:hidden;
     height: 90%;
     background-color: #333B42;
+}
+
+#cursor-follower {
+    position: absolute;
+    top: 100px;
+    left: 31px;
+    width: 100px;
+    height: 100px;
+    border-color: red;
+    border-width: 10px;
+    z-index: -1;
 }
 
 /* width */
