--- a/mainWindow.css
+++ b/mainWindow.css
@@ -139,6 +139,10 @@ body::-webkit-scrollbar {
     margin: 0;
 }
 
+#title-bar-btns button:focus {
+    outline: none;
+}
+
 #title-bar-menu {
     -webkit-app-region: no-drag;
     float: left;
@@ -190,11 +194,12 @@ body::-webkit-scrollbar {
     position: absolute;
     top: 100px;
     left: 31px;
-    width: 100px;
-    height: 100px;
-    border-color: red;
-    border-width: 10px;
-    z-index: -1;
+    width: 100%;
+    height: 22px;
+    outline: 1px solid grey;
+    z-index: 2;
+    pointer-events: none;
+
 }
 
 /* width */
