--- a/mainWindow.css
+++ b/mainWindow.css
@@ -8,7 +8,7 @@ body {
     background-color: #444C53;
     padding: 0px;
     margin: 0px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 body::-webkit-scrollbar { 
@@ -158,7 +158,7 @@ body::-webkit-scrollbar {
 }
 
 #lineNums {
-    z-index: 0;
+    z-index: 10;
     position: fixed;
     left: 20%;
     width: 30px;
@@ -185,21 +185,23 @@ body::-webkit-scrollbar {
     width: 90%;
     display:block;
     overflow:auto;
-    overflow-x:hidden;
     height: 90%;
     background-color: #333B42;
 }
 
 #cursor-follower {
+    display: none;
     position: absolute;
     top: 100px;
     left: 31px;
     width: 100%;
-    height: 22px;
-    outline: 1px solid grey;
-    z-index: 2;
+    height: 18px;
+    /* outline: 1px solid grey; */
+    border: solid grey;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    z-index: 1;
     pointer-events: none;
-
 }
 
 /* width */
@@ -214,10 +216,10 @@ body::-webkit-scrollbar {
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #111111;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #555555;
   }
