--- a/mainWindow.css
+++ b/mainWindow.css
@@ -197,23 +197,10 @@ body::-webkit-scrollbar {
     top: 0;
 }
 
-.line:focus{
-    outline: auto;
+code:focus {
+    outline: none;
+    display: block;
 }
-
-/* .code {
-    width:100%;
-    height:calc(77% + 2px);
-    resize:none;
-    display:block;
-    position:relative;
-    font-size:16px;
-    background-color:#333B42;
-    color:white;
-    word-break:keep-all;
-    white-space:nowrap;
-    overflow:scroll;
-} */
 
 #cursor-follower {
     display: none;
@@ -223,10 +210,11 @@ body::-webkit-scrollbar {
     width: 100%;
     height: 18px;
     /* outline: 1px solid grey; */
-    border: solid grey;
+    background-color: grey;
+    opacity: 0.5;
     border-width: 1px 1px;
     border-radius: 5px;
-    z-index: 1;
+    z-index: -1;
     pointer-events: none;
 }
 
