--- a/mainWindow.css
+++ b/mainWindow.css
@@ -168,7 +168,7 @@ body::-webkit-scrollbar {
 .vl {
     border-left: 1px solid #AAAAAA;
     height: 90%;
-    left: calc(20% + 29px);
+    left: calc(20% + 32px);
     opacity: 75%;
     position: fixed;
     z-index: 10;
@@ -221,7 +221,7 @@ code:focus {
 #terminal {
     position: fixed;
     height: 20%;
-    width: 100%;
+    width: 110%;
     background-color: #111111;
     top: 80%;
     z-index: 10;
@@ -230,21 +230,42 @@ code:focus {
 
 }
 
-#terminal-text {
-    display: block;
-    white-space: pre;
-    overflow: auto;
-}
-
 #terminal-resizer {
     position: fixed;
     top: 80%;
     padding: 0;
-    width: 100%;
+    width: 110%;
     margin: 0;
     height: 5px;
     border: solid grey;
     border-width: 3px 0 0 0;
+}
+
+#exit-terminal {
+    position: fixed;
+    color: white;
+    left: 95%;
+    height: 10%;
+    width: 5%;
+    top: inherit;
+    height: 20px;
+    margin: 3px 0px 0px 0px;
+    background-color: inherit;
+    border: 0;
+}
+#exit-terminal:hover {
+    background-color: #222222;
+    cursor: pointer;
+}
+
+#exit-terminal:focus {
+    outline: none;
+}
+
+#terminal-text {
+    display: block;
+    white-space: pre;
+    overflow: auto;
 }
 
 #terminal-resizer:hover {
