--- a/mainWindow.css
+++ b/mainWindow.css
@@ -33,7 +33,6 @@ body::-webkit-scrollbar {
     font-size: small;
     background-color: rgb(79, 88, 91);
     margin: 1px 1px 1px 1px;
-    
 }
 
 .menu-button{
@@ -153,22 +152,33 @@ body::-webkit-scrollbar {
     color: #AAAAAA;
 }
 
+.tab{
+    border-radius: 10px 10px 0px 0px;
+    position: fixed;
+    height: 24px;
+    width: 10%;
+    background-color: #3A3A3A; /* 292929 */
+    left: calc(21% + 13px);
+    top: 26px;
+}
+
 #lineNums {
     z-index: 10;
     position: fixed;
-    left: 20%;
+    left: calc(20% - 2px);
     width: 30px;
-    display:block;
-    overflow:hidden;
+    display: block;
+    overflow: hidden;
     height: inherit;
     -webkit-user-select: none;
     background-color: #222A31;
+    border-radius: 5px 0 0 0;
 }
 
 .vl {
     border-left: 1px solid #AAAAAA;
     height: 90%;
-    left: calc(20% + 32px);
+    left: calc(20% + 29px);
     opacity: 75%;
     position: fixed;
     z-index: 10;
@@ -177,7 +187,7 @@ body::-webkit-scrollbar {
 #content {
     z-index: -1;
     position: fixed;
-    top: 10%;
+    top: 50px;
     left: 20%;
     width: 90%;
     display:block;
